[package]
name = "risc_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
elf = "0.7.1"
env_logger = "0.10.0"
log = "0.4.17"
