[package]
name = "risc_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# debug = true

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
elf = "0.7.1"
log = "0.4.17"
num-derive = "0.4.0"
num-traits = "0.2.16"
simplelog = "0.12.1"
test-log = { version = "0.2.12", features = ["log"] }
